Checkpoint - Tenant with Prefixing completed (though it is coupled to having auth being enabled)